--- a/env.example
+++ b/env.example
@@ -1,5 +1,9 @@
-# Telegram Bot Token
+# Telegram Bot Token (обязательно)
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+
+# Telegram Webhook URL (опционально, если используете webhook вместо polling)
+# Формат: https://your-domain.com
+TELEGRAM_WEBHOOK_URL=https://your-domain.com
 
 # JWT Secret Key
 JWT_SECRET=your_jwt_secret_key_here
