--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.15.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sharp": "^0.33.0"
   }
 }
